src/components/SystemDetails.scss
.ins-c-job-output__title { padding-bottom: var(--pf-global--spacer--lg)}

.ins-c-job-output {
    max-height: 500px;
    padding: 0 !important;
    border-color: var(--pf-global--Color--light-300);
    border-width: 2px;
    border-style: solid solid none solid;
    white-space: pre-wrap;

    code {
        // style the line numbers
        &:first-of-type {
            padding: var(--pf-global--spacer--sm);
            border-right: 2px solid var(--pf-global--Color--light-300);
            margin-right: var(--pf-global--spacer--sm);
        }
         &:nth-of-type(2) {
             position: relative;
             top: var(--pf-global--spacer--sm);
             white-space: pre-wrap;
         }
    }

    // add the border to the bottom since the spinner won't be there
    &__finished { border-bottom: 2px solid var(--pf-global--Color--light-300);}
}

.rem-l-playbook-running {
    background: rgb(240, 240, 240);
    padding: 15px;
    display: flex;
    justify-content: center;
    border-color: var(--pf-global--Color--light-300);
    border-width: 2px;
    border-style: none solid solid solid;
}

